cmake is causing to many issues so im going to remove it and deal with it if i can get time at the end

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,14 +12,7 @@
             "environment": [],
             "externalConsole": false,
             "MIMode": "gdb",
-            "setupCommands": [
-                {
-                    "description": "Enable pretty-printing for gdb",
-                    "text": "-enable-pretty-printing",
-                    "ignoreFailures": true
-                }
-            ],
-            "preLaunchTask": "CMake: Build",
+            "preLaunchTask": "build",
             "miDebuggerPath": "/usr/bin/gdb",
             "setupCommands": [
                 {
